2007-09-26  Johannes Schmid <jhs@gnome.org>

	Patch by <genbell@tiscali.it>:

	* gdl/gdl-dock-item-grip.c: (gdl_dock_item_grip_set_property):

	Fix #462537 – GdlDockItemGrip notification callback

2007-09-26  Johannes Schmid <jhs@gnome.org>

	* autogen.sh:
	Fixed #468645 and #452331 by using gnome-autogen.sh instead
	of a buggy custom implementation

2007-09-25  Johannes Schmid <jhs@gnome.org>

	* gdl/gdl-switcher.c:
	Use smaller icons to not waste too much screen space

2007-09-24  Johannes Schmid <jhs@gnome.org>

	* gdl/gdl-icons.c:
	Do not ref/unref icon theme as GTK+ docs stricly say you should not do that!
	
	* configure.in:
	Disable deprecated flags completely until #457562 is fixed

	* MAINTAINERS: stick to GNOME convention to allow commit

=== gdl 0.7.7 ===

2007-08-14  Naba Kumar  <naba@gnome.org>

	* configure.in: Bumped version to 0.7.7
	* NEWS: Updated.

	Patch from Halton Huo:
	* gdl/gdl-tools.h: Fixes Bug #407393 – (void)0 will cause build fail on
	Sun cc.

2007-07-21  Johannes Schmid <jhs@gnome.org>

	* configure.in:
	Removed GTK_DISABLE_DEPRECATED from CFLAGS because it will break
	with Gtk+ >= 2.10. There is a patch to move to the new tooltips
	API attached to bug #457562

2007-07-19  Johannes Schmid <jhs@gnome.org>

	* gdl/gdl-switcher.c: (layout_buttons):
	Fixed crasher in button layout

2007-06-30  Naba Kumar  <naba.kumar@gnome.org>

	* gdl/gdl-dock-bar.c: (on_dock_item_foreach_disconnect),
	(gdl_dock_bar_destroy), (gdl_dock_bar_remove_item),
	(gdl_dock_bar_add_item): Removed minimized buttons from dockbar when
	corresponding dockitem is destroyed. Fixes bug #317004 - Crash when
	maximizaing widget that has been already removed

=== gdl 0.7.6 ===

2007-06-22  Naba Kumar  <naba.kumar@gnome.org>

	* NEWS: Updated
	* configure.in: Bumped version to 0.7.6

	Patch from Halton Huo:
	* gdl/gdl-dock-item.c: (gdl_dock_item_expose), 
	gdl/gdl-dock-tablabel.c: (gdl_dock_tablabel_expose),
	gdl/gdl-tools.h: Bug #407393 – (void)0 will cause build fail on